parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BIT_AND
    BIT_OR
    COMMA
    DEF
    EQEQ
    FLOWERCLOSE
    FLOWEROPEN
    IF
    LEVEL3
    MOD
    NAME
    NEWLINE
    NOTEQ
    OR

Grammar

Rule 0     S' -> expression
Rule 1     expression -> ID EQUAL expression
Rule 2     expression -> ID EQUAL EMP_LIST
Rule 3     expression -> ID EQUAL EMP_TUPLE
Rule 4     expression -> ID EQUAL EMP_SET
Rule 5     expression -> ID EQUAL STR_CONST
Rule 6     expression -> ID EQUAL ID
Rule 7     expression -> ID PLUS EQUAL term
Rule 8     expression -> expression PLUS term
Rule 9     expression -> ID PLUS factor
Rule 10    expression -> PRINT PARANOPEN STR_CONST PARANCLOSE
Rule 11    expression -> PRINT PARANOPEN ID PARANCLOSE
Rule 12    expression -> PRINT PARANOPEN term PARANCLOSE
Rule 13    expression -> expression MINUS term
Rule 14    expression -> ID MINUS EQUAL term
Rule 15    expression -> MINUS term
Rule 16    expression -> term
Rule 17    term -> term MULTIPLY factor
Rule 18    term -> term DIVIDE factor
Rule 19    term -> factor
Rule 20    factor -> INT
Rule 21    factor -> FLOAT
Rule 22    factor -> PARANOPEN expression PARANCLOSE
Rule 23    expression -> whileloop
Rule 24    expression -> forloop
Rule 25    expression -> forloop2
Rule 26    expression -> whileloop2
Rule 27    whileloop2 -> LEVEL1 WHILE PARANOPEN ID EQUAL factor PARANCLOSE COLON
Rule 28    whileloop2 -> LEVEL1 WHILE PARANOPEN ID EQUAL STR_CONST PARANCLOSE COLON
Rule 29    whileloop2 -> LEVEL1 WHILE PARANOPEN ID EQUAL ID PARANCLOSE COLON
Rule 30    whileloop2 -> LEVEL1 WHILE PARANOPEN ID GREATER factor PARANCLOSE COLON
Rule 31    whileloop2 -> LEVEL1 WHILE PARANOPEN ID GREATER STR_CONST PARANCLOSE COLON
Rule 32    whileloop2 -> LEVEL1 WHILE PARANOPEN ID GREATER ID PARANCLOSE COLON
Rule 33    whileloop2 -> LEVEL1 WHILE PARANOPEN ID GREATEREQ factor PARANCLOSE COLON
Rule 34    whileloop2 -> LEVEL1 WHILE PARANOPEN ID GREATEREQ STR_CONST PARANCLOSE COLON
Rule 35    whileloop2 -> LEVEL1 WHILE PARANOPEN ID GREATEREQ ID PARANCLOSE COLON
Rule 36    whileloop2 -> LEVEL1 WHILE PARANOPEN ID LESSER factor PARANCLOSE COLON
Rule 37    whileloop2 -> LEVEL1 WHILE PARANOPEN ID LESSER STR_CONST PARANCLOSE COLON
Rule 38    whileloop2 -> LEVEL1 WHILE PARANOPEN ID LESSER ID PARANCLOSE COLON
Rule 39    whileloop2 -> LEVEL1 WHILE PARANOPEN ID LESSEREQ factor PARANCLOSE COLON
Rule 40    whileloop2 -> LEVEL1 WHILE PARANOPEN ID LESSEREQ STR_CONST PARANCLOSE COLON
Rule 41    whileloop2 -> WHILE PARANOPEN ID LESSEREQ ID PARANCLOSE COLON
Rule 42    whileloop2 -> LEVEL1 WHILE BOOL COLON
Rule 43    whileloop2 -> LEVEL1 WHILE STR_CONST COLON
Rule 44    whileloop2 -> LEVEL1 WHILE factor COLON
Rule 45    whileloop2 -> LEVEL1 WHILE ID COLON
Rule 46    whileloop -> WHILE PARANOPEN ID EQUAL factor PARANCLOSE COLON
Rule 47    whileloop -> WHILE PARANOPEN ID EQUAL STR_CONST PARANCLOSE COLON
Rule 48    whileloop -> WHILE PARANOPEN ID EQUAL ID PARANCLOSE COLON
Rule 49    whileloop -> WHILE PARANOPEN ID GREATER factor PARANCLOSE COLON
Rule 50    whileloop -> WHILE PARANOPEN ID GREATER STR_CONST PARANCLOSE COLON
Rule 51    whileloop -> WHILE PARANOPEN ID GREATER ID PARANCLOSE COLON
Rule 52    whileloop -> WHILE PARANOPEN ID GREATEREQ factor PARANCLOSE COLON
Rule 53    whileloop -> WHILE PARANOPEN ID GREATEREQ STR_CONST PARANCLOSE COLON
Rule 54    whileloop -> WHILE PARANOPEN ID GREATEREQ ID PARANCLOSE COLON
Rule 55    whileloop -> WHILE PARANOPEN ID LESSER factor PARANCLOSE COLON
Rule 56    whileloop -> WHILE PARANOPEN ID LESSER STR_CONST PARANCLOSE COLON
Rule 57    whileloop -> WHILE PARANOPEN ID LESSER ID PARANCLOSE COLON
Rule 58    whileloop -> WHILE PARANOPEN ID LESSEREQ factor PARANCLOSE COLON
Rule 59    whileloop -> WHILE PARANOPEN ID LESSEREQ STR_CONST PARANCLOSE COLON
Rule 60    whileloop -> WHILE PARANOPEN ID LESSEREQ ID PARANCLOSE COLON
Rule 61    whileloop -> WHILE BOOL COLON
Rule 62    whileloop -> WHILE STR_CONST COLON
Rule 63    whileloop -> WHILE factor COLON
Rule 64    whileloop -> WHILE ID COLON
Rule 65    forloop2 -> LEVEL1 FOR ID IN RANGE PARANOPEN term PARANCLOSE COLON
Rule 66    forloop2 -> LEVEL1 FOR ID IN RANGE PARANOPEN LEN PARANOPEN ID PARANCLOSE PARANCLOSE COLON
Rule 67    forloop2 -> LEVEL1 FOR ID IN STR_CONST COLON
Rule 68    forloop2 -> LEVEL1 FOR ID IN ID COLON
Rule 69    forloop2 -> LEVEL1 FOR ID IN PARANOPEN STR_CONST PARANCLOSE COLON
Rule 70    forloop -> FOR ID IN RANGE PARANOPEN term PARANCLOSE COLON
Rule 71    forloop -> FOR ID IN RANGE PARANOPEN LEN PARANOPEN ID PARANCLOSE PARANCLOSE COLON
Rule 72    forloop -> FOR ID IN STR_CONST COLON
Rule 73    forloop -> FOR ID IN ID COLON
Rule 74    forloop -> FOR ID IN PARANOPEN STR_CONST PARANCLOSE COLON
Rule 75    expression -> LEVEL2 ID EQUAL expression
Rule 76    expression -> LEVEL2 ID EQUAL ID
Rule 77    expression -> LEVEL2 ID EQUAL STR_CONST
Rule 78    expression -> LEVEL1 ID EQUAL expression
Rule 79    expression -> LEVEL1 ID EQUAL ID
Rule 80    expression -> LEVEL1 ID EQUAL STR_CONST
Rule 81    expression -> LEVEL2 PRINT PARANOPEN STR_CONST PARANCLOSE
Rule 82    expression -> LEVEL2 PRINT PARANOPEN ID PARANCLOSE
Rule 83    expression -> LEVEL2 PRINT PARANOPEN term PARANCLOSE
Rule 84    expression -> LEVEL1 PRINT PARANOPEN STR_CONST PARANCLOSE
Rule 85    expression -> LEVEL1 PRINT PARANOPEN ID PARANCLOSE
Rule 86    expression -> LEVEL1 PRINT PARANOPEN term PARANCLOSE
Rule 87    expression -> <empty>
Rule 88    expression -> HASH expression
Rule 89    expression -> HASH ID
Rule 90    expression -> HASH STR_CONST

Terminals, with rules where they appear

AND                  : 
BIT_AND              : 
BIT_OR               : 
BOOL                 : 42 61
COLON                : 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
COMMA                : 
DEF                  : 
DIVIDE               : 18
EMP_LIST             : 2
EMP_SET              : 4
EMP_TUPLE            : 3
EQEQ                 : 
EQUAL                : 1 2 3 4 5 6 7 14 27 28 29 46 47 48 75 76 77 78 79 80
FLOAT                : 21
FLOWERCLOSE          : 
FLOWEROPEN           : 
FOR                  : 65 66 67 68 69 70 71 72 73 74
GREATER              : 30 31 32 49 50 51
GREATEREQ            : 33 34 35 52 53 54
HASH                 : 88 89 90
ID                   : 1 2 3 4 5 6 6 7 9 11 14 27 28 29 29 30 31 32 32 33 34 35 35 36 37 38 38 39 40 41 41 45 46 47 48 48 49 50 51 51 52 53 54 54 55 56 57 57 58 59 60 60 64 65 66 66 67 68 68 69 70 71 71 72 73 73 74 75 76 76 77 78 79 79 80 82 85 89
IF                   : 
IN                   : 65 66 67 68 69 70 71 72 73 74
INT                  : 20
LEN                  : 66 71
LESSER               : 36 37 38 55 56 57
LESSEREQ             : 39 40 41 58 59 60
LEVEL1               : 27 28 29 30 31 32 33 34 35 36 37 38 39 40 42 43 44 45 65 66 67 68 69 78 79 80 84 85 86
LEVEL2               : 75 76 77 81 82 83
LEVEL3               : 
MINUS                : 13 14 15
MOD                  : 
MULTIPLY             : 17
NAME                 : 
NEWLINE              : 
NOTEQ                : 
OR                   : 
PARANCLOSE           : 10 11 12 22 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 65 66 66 69 70 71 71 74 81 82 83 84 85 86
PARANOPEN            : 10 11 12 22 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 65 66 66 69 70 71 71 74 81 82 83 84 85 86
PLUS                 : 7 8 9
PRINT                : 10 11 12 81 82 83 84 85 86
RANGE                : 65 66 70 71
STR_CONST            : 5 10 28 31 34 37 40 43 47 50 53 56 59 62 67 69 72 74 77 80 81 84 90
WHILE                : 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
error                : 

Nonterminals, with rules where they appear

expression           : 1 8 13 22 75 78 88 0
factor               : 9 17 18 19 27 30 33 36 39 44 46 49 52 55 58 63
forloop              : 24
forloop2             : 25
term                 : 7 8 12 13 14 15 16 17 18 65 70 83 86
whileloop            : 23
whileloop2           : 26

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . ID EQUAL expression
    (2) expression -> . ID EQUAL EMP_LIST
    (3) expression -> . ID EQUAL EMP_TUPLE
    (4) expression -> . ID EQUAL EMP_SET
    (5) expression -> . ID EQUAL STR_CONST
    (6) expression -> . ID EQUAL ID
    (7) expression -> . ID PLUS EQUAL term
    (8) expression -> . expression PLUS term
    (9) expression -> . ID PLUS factor
    (10) expression -> . PRINT PARANOPEN STR_CONST PARANCLOSE
    (11) expression -> . PRINT PARANOPEN ID PARANCLOSE
    (12) expression -> . PRINT PARANOPEN term PARANCLOSE
    (13) expression -> . expression MINUS term
    (14) expression -> . ID MINUS EQUAL term
    (15) expression -> . MINUS term
    (16) expression -> . term
    (23) expression -> . whileloop
    (24) expression -> . forloop
    (25) expression -> . forloop2
    (26) expression -> . whileloop2
    (75) expression -> . LEVEL2 ID EQUAL expression
    (76) expression -> . LEVEL2 ID EQUAL ID
    (77) expression -> . LEVEL2 ID EQUAL STR_CONST
    (78) expression -> . LEVEL1 ID EQUAL expression
    (79) expression -> . LEVEL1 ID EQUAL ID
    (80) expression -> . LEVEL1 ID EQUAL STR_CONST
    (81) expression -> . LEVEL2 PRINT PARANOPEN STR_CONST PARANCLOSE
    (82) expression -> . LEVEL2 PRINT PARANOPEN ID PARANCLOSE
    (83) expression -> . LEVEL2 PRINT PARANOPEN term PARANCLOSE
    (84) expression -> . LEVEL1 PRINT PARANOPEN STR_CONST PARANCLOSE
    (85) expression -> . LEVEL1 PRINT PARANOPEN ID PARANCLOSE
    (86) expression -> . LEVEL1 PRINT PARANOPEN term PARANCLOSE
    (87) expression -> .
    (88) expression -> . HASH expression
    (89) expression -> . HASH ID
    (90) expression -> . HASH STR_CONST
    (17) term -> . term MULTIPLY factor
    (18) term -> . term DIVIDE factor
    (19) term -> . factor
    (46) whileloop -> . WHILE PARANOPEN ID EQUAL factor PARANCLOSE COLON
    (47) whileloop -> . WHILE PARANOPEN ID EQUAL STR_CONST PARANCLOSE COLON
    (48) whileloop -> . WHILE PARANOPEN ID EQUAL ID PARANCLOSE COLON
    (49) whileloop -> . WHILE PARANOPEN ID GREATER factor PARANCLOSE COLON
    (50) whileloop -> . WHILE PARANOPEN ID GREATER STR_CONST PARANCLOSE COLON
    (51) whileloop -> . WHILE PARANOPEN ID GREATER ID PARANCLOSE COLON
    (52) whileloop -> . WHILE PARANOPEN ID GREATEREQ factor PARANCLOSE COLON
    (53) whileloop -> . WHILE PARANOPEN ID GREATEREQ STR_CONST PARANCLOSE COLON
    (54) whileloop -> . WHILE PARANOPEN ID GREATEREQ ID PARANCLOSE COLON
    (55) whileloop -> . WHILE PARANOPEN ID LESSER factor PARANCLOSE COLON
    (56) whileloop -> . WHILE PARANOPEN ID LESSER STR_CONST PARANCLOSE COLON
    (57) whileloop -> . WHILE PARANOPEN ID LESSER ID PARANCLOSE COLON
    (58) whileloop -> . WHILE PARANOPEN ID LESSEREQ factor PARANCLOSE COLON
    (59) whileloop -> . WHILE PARANOPEN ID LESSEREQ STR_CONST PARANCLOSE COLON
    (60) whileloop -> . WHILE PARANOPEN ID LESSEREQ ID PARANCLOSE COLON
    (61) whileloop -> . WHILE BOOL COLON
    (62) whileloop -> . WHILE STR_CONST COLON
    (63) whileloop -> . WHILE factor COLON
    (64) whileloop -> . WHILE ID COLON
    (70) forloop -> . FOR ID IN RANGE PARANOPEN term PARANCLOSE COLON
    (71) forloop -> . FOR ID IN RANGE PARANOPEN LEN PARANOPEN ID PARANCLOSE PARANCLOSE COLON
    (72) forloop -> . FOR ID IN STR_CONST COLON
    (73) forloop -> . FOR ID IN ID COLON
    (74) forloop -> . FOR ID IN PARANOPEN STR_CONST PARANCLOSE COLON
    (65) forloop2 -> . LEVEL1 FOR ID IN RANGE PARANOPEN term PARANCLOSE COLON
    (66) forloop2 -> . LEVEL1 FOR ID IN RANGE PARANOPEN LEN PARANOPEN ID PARANCLOSE PARANCLOSE COLON
    (67) forloop2 -> . LEVEL1 FOR ID IN STR_CONST COLON
    (68) forloop2 -> . LEVEL1 FOR ID IN ID COLON
    (69) forloop2 -> . LEVEL1 FOR ID IN PARANOPEN STR_CONST PARANCLOSE COLON
    (27) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID EQUAL factor PARANCLOSE COLON
    (28) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID EQUAL STR_CONST PARANCLOSE COLON
    (29) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID EQUAL ID PARANCLOSE COLON
    (30) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID GREATER factor PARANCLOSE COLON
    (31) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID GREATER STR_CONST PARANCLOSE COLON
    (32) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID GREATER ID PARANCLOSE COLON
    (33) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID GREATEREQ factor PARANCLOSE COLON
    (34) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID GREATEREQ STR_CONST PARANCLOSE COLON
    (35) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID GREATEREQ ID PARANCLOSE COLON
    (36) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID LESSER factor PARANCLOSE COLON
    (37) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID LESSER STR_CONST PARANCLOSE COLON
    (38) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID LESSER ID PARANCLOSE COLON
    (39) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID LESSEREQ factor PARANCLOSE COLON
    (40) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID LESSEREQ STR_CONST PARANCLOSE COLON
    (41) whileloop2 -> . WHILE PARANOPEN ID LESSEREQ ID PARANCLOSE COLON
    (42) whileloop2 -> . LEVEL1 WHILE BOOL COLON
    (43) whileloop2 -> . LEVEL1 WHILE STR_CONST COLON
    (44) whileloop2 -> . LEVEL1 WHILE factor COLON
    (45) whileloop2 -> . LEVEL1 WHILE ID COLON
    (20) factor -> . INT
    (21) factor -> . FLOAT
    (22) factor -> . PARANOPEN expression PARANCLOSE

  ! shift/reduce conflict for MINUS resolved as shift
    ID              shift and go to state 2
    PRINT           shift and go to state 5
    MINUS           shift and go to state 7
    LEVEL2          shift and go to state 12
    LEVEL1          shift and go to state 13
    PLUS            reduce using rule 87 (expression -> .)
    $end            reduce using rule 87 (expression -> .)
    HASH            shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    PARANOPEN       shift and go to state 6

  ! MINUS           [ reduce using rule 87 (expression -> .) ]

    expression                     shift and go to state 1
    term                           shift and go to state 3
    factor                         shift and go to state 4
    whileloop                      shift and go to state 8
    forloop                        shift and go to state 9
    forloop2                       shift and go to state 10
    whileloop2                     shift and go to state 11

state 1

    (0) S' -> expression .
    (8) expression -> expression . PLUS term
    (13) expression -> expression . MINUS term

    PLUS            shift and go to state 19
    MINUS           shift and go to state 20


state 2

    (1) expression -> ID . EQUAL expression
    (2) expression -> ID . EQUAL EMP_LIST
    (3) expression -> ID . EQUAL EMP_TUPLE
    (4) expression -> ID . EQUAL EMP_SET
    (5) expression -> ID . EQUAL STR_CONST
    (6) expression -> ID . EQUAL ID
    (7) expression -> ID . PLUS EQUAL term
    (9) expression -> ID . PLUS factor
    (14) expression -> ID . MINUS EQUAL term

    EQUAL           shift and go to state 21
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23


state 3

    (16) expression -> term .
    (17) term -> term . MULTIPLY factor
    (18) term -> term . DIVIDE factor

    PLUS            reduce using rule 16 (expression -> term .)
    MINUS           reduce using rule 16 (expression -> term .)
    $end            reduce using rule 16 (expression -> term .)
    PARANCLOSE      reduce using rule 16 (expression -> term .)
    MULTIPLY        shift and go to state 24
    DIVIDE          shift and go to state 25


state 4

    (19) term -> factor .

    MULTIPLY        reduce using rule 19 (term -> factor .)
    DIVIDE          reduce using rule 19 (term -> factor .)
    PLUS            reduce using rule 19 (term -> factor .)
    MINUS           reduce using rule 19 (term -> factor .)
    $end            reduce using rule 19 (term -> factor .)
    PARANCLOSE      reduce using rule 19 (term -> factor .)


state 5

    (10) expression -> PRINT . PARANOPEN STR_CONST PARANCLOSE
    (11) expression -> PRINT . PARANOPEN ID PARANCLOSE
    (12) expression -> PRINT . PARANOPEN term PARANCLOSE

    PARANOPEN       shift and go to state 26


state 6

    (22) factor -> PARANOPEN . expression PARANCLOSE
    (1) expression -> . ID EQUAL expression
    (2) expression -> . ID EQUAL EMP_LIST
    (3) expression -> . ID EQUAL EMP_TUPLE
    (4) expression -> . ID EQUAL EMP_SET
    (5) expression -> . ID EQUAL STR_CONST
    (6) expression -> . ID EQUAL ID
    (7) expression -> . ID PLUS EQUAL term
    (8) expression -> . expression PLUS term
    (9) expression -> . ID PLUS factor
    (10) expression -> . PRINT PARANOPEN STR_CONST PARANCLOSE
    (11) expression -> . PRINT PARANOPEN ID PARANCLOSE
    (12) expression -> . PRINT PARANOPEN term PARANCLOSE
    (13) expression -> . expression MINUS term
    (14) expression -> . ID MINUS EQUAL term
    (15) expression -> . MINUS term
    (16) expression -> . term
    (23) expression -> . whileloop
    (24) expression -> . forloop
    (25) expression -> . forloop2
    (26) expression -> . whileloop2
    (75) expression -> . LEVEL2 ID EQUAL expression
    (76) expression -> . LEVEL2 ID EQUAL ID
    (77) expression -> . LEVEL2 ID EQUAL STR_CONST
    (78) expression -> . LEVEL1 ID EQUAL expression
    (79) expression -> . LEVEL1 ID EQUAL ID
    (80) expression -> . LEVEL1 ID EQUAL STR_CONST
    (81) expression -> . LEVEL2 PRINT PARANOPEN STR_CONST PARANCLOSE
    (82) expression -> . LEVEL2 PRINT PARANOPEN ID PARANCLOSE
    (83) expression -> . LEVEL2 PRINT PARANOPEN term PARANCLOSE
    (84) expression -> . LEVEL1 PRINT PARANOPEN STR_CONST PARANCLOSE
    (85) expression -> . LEVEL1 PRINT PARANOPEN ID PARANCLOSE
    (86) expression -> . LEVEL1 PRINT PARANOPEN term PARANCLOSE
    (87) expression -> .
    (88) expression -> . HASH expression
    (89) expression -> . HASH ID
    (90) expression -> . HASH STR_CONST
    (17) term -> . term MULTIPLY factor
    (18) term -> . term DIVIDE factor
    (19) term -> . factor
    (46) whileloop -> . WHILE PARANOPEN ID EQUAL factor PARANCLOSE COLON
    (47) whileloop -> . WHILE PARANOPEN ID EQUAL STR_CONST PARANCLOSE COLON
    (48) whileloop -> . WHILE PARANOPEN ID EQUAL ID PARANCLOSE COLON
    (49) whileloop -> . WHILE PARANOPEN ID GREATER factor PARANCLOSE COLON
    (50) whileloop -> . WHILE PARANOPEN ID GREATER STR_CONST PARANCLOSE COLON
    (51) whileloop -> . WHILE PARANOPEN ID GREATER ID PARANCLOSE COLON
    (52) whileloop -> . WHILE PARANOPEN ID GREATEREQ factor PARANCLOSE COLON
    (53) whileloop -> . WHILE PARANOPEN ID GREATEREQ STR_CONST PARANCLOSE COLON
    (54) whileloop -> . WHILE PARANOPEN ID GREATEREQ ID PARANCLOSE COLON
    (55) whileloop -> . WHILE PARANOPEN ID LESSER factor PARANCLOSE COLON
    (56) whileloop -> . WHILE PARANOPEN ID LESSER STR_CONST PARANCLOSE COLON
    (57) whileloop -> . WHILE PARANOPEN ID LESSER ID PARANCLOSE COLON
    (58) whileloop -> . WHILE PARANOPEN ID LESSEREQ factor PARANCLOSE COLON
    (59) whileloop -> . WHILE PARANOPEN ID LESSEREQ STR_CONST PARANCLOSE COLON
    (60) whileloop -> . WHILE PARANOPEN ID LESSEREQ ID PARANCLOSE COLON
    (61) whileloop -> . WHILE BOOL COLON
    (62) whileloop -> . WHILE STR_CONST COLON
    (63) whileloop -> . WHILE factor COLON
    (64) whileloop -> . WHILE ID COLON
    (70) forloop -> . FOR ID IN RANGE PARANOPEN term PARANCLOSE COLON
    (71) forloop -> . FOR ID IN RANGE PARANOPEN LEN PARANOPEN ID PARANCLOSE PARANCLOSE COLON
    (72) forloop -> . FOR ID IN STR_CONST COLON
    (73) forloop -> . FOR ID IN ID COLON
    (74) forloop -> . FOR ID IN PARANOPEN STR_CONST PARANCLOSE COLON
    (65) forloop2 -> . LEVEL1 FOR ID IN RANGE PARANOPEN term PARANCLOSE COLON
    (66) forloop2 -> . LEVEL1 FOR ID IN RANGE PARANOPEN LEN PARANOPEN ID PARANCLOSE PARANCLOSE COLON
    (67) forloop2 -> . LEVEL1 FOR ID IN STR_CONST COLON
    (68) forloop2 -> . LEVEL1 FOR ID IN ID COLON
    (69) forloop2 -> . LEVEL1 FOR ID IN PARANOPEN STR_CONST PARANCLOSE COLON
    (27) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID EQUAL factor PARANCLOSE COLON
    (28) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID EQUAL STR_CONST PARANCLOSE COLON
    (29) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID EQUAL ID PARANCLOSE COLON
    (30) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID GREATER factor PARANCLOSE COLON
    (31) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID GREATER STR_CONST PARANCLOSE COLON
    (32) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID GREATER ID PARANCLOSE COLON
    (33) whileloop2 -> . LEVEL1 WHILE PARANOPEN ID GREATEREQ factor PARANCLOSE COLON
